# wardrowbe

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.prod.external.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: analytics.py  auth.py  backup.py  families.py  folders.py  health.py  images.py  items.py  learning.py  notifications.py  outfits.py  pairings.py  preferences.py  router.py  users.py  weather.py
backend/app/models/: __init__.py  folder.py  item.py  user.py
backend/app/prompts/: clothing_analysis.txt  clothing_description.txt  recommendation.txt
backend/app/schemas/: __init__.py  auth.py  folder.py  item.py  notification.py  user.py
backend/app/services/: ai_service.py  image_service.py  item_scorer.py  item_service.py  learning_service.py  notification_providers.py  notification_service.py  (+7 more)
backend/tests/: conftest.py  test_ai_service.py  test_analytics.py  test_auth.py  test_backup.py  test_health.py  test_i18n.py  test_image_service.py  test_item_scorer.py  test_items.py  test_items_reanalyze.py  test_learning_service.py  test_manual_outfits.py  test_notifications.py  test_oidc_utils.py  test_outfit_family_access.py  test_pairings.py  test_preferences.py  test_recommendation_service.py  test_remove_bg_endpoint.py  test_security.py  test_suggestion_cache.py  test_tagging_worker.py  test_users.py  test_weather_service.py
(+364 files in other folders)
